--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8">
                             <div class="row">
-                                <div class="col-lg-3"><button id="easy" onClick="populateEasyBoard()" type="button" class="btn btn-success btn diff">Esy</button> </div>
+                                <div class="col-lg-3"><button id="easy" onClick="populateEasyBoard()" type="button" class="btn btn-success btn diff">Easy</button> </div>
                                 <div class="col-lg-3"><button id="medium" onClick="populatemediumBoard()"type="button" class="btn btn-success btn diff">Medium</button></div>
                                 <div class="col-lg-3"><button id="hard" onClick="populatehardBoard()" type="button" class="btn btn-primary btn diff">Hard</button></div>
                                 <div class="col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diff">Check</button></div>
