added pictures, fixed esy

--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
                         <form class="login">
                             <input class= "inp" id="username" onblur="checkUser()"type="text" placeholder="User Name"> </br>
                             <div id="userCheck"></div> </br>
-                            <input class= "inp" id= "pass" onblur="checkPass()" type= "text" placeholder="Password"> </br>
+                            <input class= "inp" id= "pass" onblur="checkPass()" type= "password" placeholder="Password"> </br>
                             <div id="passcheck"></div> </br>
                             <button id="enter" type="button" onclick="enterCheck()" class="btn btn-lg btn-primary btn">Enter</button>
                         </form>
