--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
                         <div class="row justify-content-center" id="secondPageBtn">
                             <div class=col-lg-6>
                                 <div class="row">
-                                    <div class="col-lg-4"><button id="easy" onClick="redirectToEasyBoard()"  type="button" class="btn btn-success btn diffbtn">Esy</button> </div>
+                                    <div class="col-lg-4"><button id="easy" onClick="redirectToEasyBoard()"  type="button" class="btn btn-success btn diffbtn">Easy</button> </div>
                                     <div class="col-lg-4"><button id="medium" onClick="redirectToMedBoard()"  type="button" class="btn btn-success btn diffbtn">Medium</button></div>
                                     <div class="col-lg-4"><button id="hard" onClick="redirectToHardBoard()"  type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
                                 </div>
