--- a/index3.html
+++ b/index3.html
@@ -128,8 +128,8 @@
                     <div class="col-4 col-md-6 col-lg-8">
                         <div class="row justify-content-center">
                                 <div class="col-md-6 col-lg-3"><button id="easy" onClick="populateEasyBoard()" type="button" class="btn btn-success btn diffbtn">Easy</button> </div>
-                                <div class="col-md-6 col-lg-3"><button id="medium" onClick="populatemediumBoard()"type="button" class="btn btn-success btn diffbtn">Medium</button></div>
-                                <div class="col-md-6 col-lg-3"><button id="hard" onClick="populatehardBoard()" type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
+                                <div class="col-md-6 col-lg-3"><button id="medium" onClick="populateMediumBoard()"type="button" class="btn btn-success btn diffbtn">Medium</button></div>
+                                <div class="col-md-6 col-lg-3"><button id="hard" onClick="populateHardBoard()" type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
                                 <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn">Check</button></div>
                         </div>
                     </div>
