--- a/index3.html
+++ b/index3.html
@@ -138,5 +138,18 @@
          </div>
     </div>
 <script src='script.js'></script>
+<script>
+function pageLoad() {
+    debugger;
+    switch (window.location.hash) {
+
+        case "#easy": populateEasyBoard();
+        break;
+        case "#medium": populateMediumBoard();
+        break;
+        case "#hard" : populateHardBoard();
+        break;
+    }
+}</script>
 </body>
 </html>
