--- a/index3.html
+++ b/index3.html
@@ -127,10 +127,9 @@
                 <div class="row justify-content-center">
                     <div class="col-4 col-md-6 col-lg-8">
                         <div class="row justify-content-center">
-                                <div class="col-md-6 col-lg-3"><button id="easy" onClick="populateEasyBoard()" type="button" class="btn btn-success btn diffbtn">Easy</button> </div>
-                                <div class="col-md-6 col-lg-3"><button id="medium" onClick="populateMediumBoard()"type="button" class="btn btn-success btn diffbtn">Medium</button></div>
-                                <div class="col-md-6 col-lg-3"><button id="hard" onClick="populateHardBoard()" type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
-                                <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn">Check</button></div>
+
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn">Finish</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn">Again</button></div>
                         </div>
                     </div>
                 </div>
