--- a/index3.html
+++ b/index3.html
@@ -130,6 +130,7 @@
 
                             <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn">Finish</button></div>
                             <div class="col-md-6 col-lg-3"><button id="check" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn">Again</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="hint()" type="button" class="btn btn-success btn diffbtn">Hint</button></div>
                         </div>
                     </div>
                 </div>
