added new pictures and revised style accordingly

--- a/index1.html
+++ b/index1.html
@@ -15,6 +15,8 @@
             <div class="backgroundBlock">
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-sm-12">
+                        <p>Hello Guest wanna play?</p></br>
+                        <p>Please Login</p>
                         <form class="login">
                             <input class= "inp" id="username" onblur="checkUser()"type="text" placeholder="User Name"> </br>
                             <div id="userCheck"></div> </br>
