--- a/index1.html
+++ b/index1.html
@@ -18,9 +18,9 @@
                         <p>Hello Guest wanna play?</p></br>
                         <p>Please Login</p>
                         <form class="login">
-                            <input class= "inp" id="username" onblur="checkUser()"type="text" placeholder="User Name"> </br>
+                            <input class= "inp" id="username" onblur="checkUser()" type="text" placeholder="User Name"> </br>
                             <div id="userCheck"></div> </br>
-                            <input class= "inp" id= "pass" onblur="checkPass()" type= "password" placeholder="Password"> </br>
+                            <input class= "inp" id= "pass" onkeyup="triggerEnterBtn(event); checkPass()"; type= "password" placeholder="Password"> </br>
                             <div id="passcheck"></div> </br>
                             <button id="enter" type="button" onclick="enterCheck()" class="btn btn-lg btn-primary btn">Enter</button>
                         </form>
