--- a/index2.html
+++ b/index2.html
@@ -27,9 +27,9 @@
                         <div class="row justify-content-center" id="secondPageBtn">
                             <div class=col-lg-6>
                                 <div class="row">
-                                    <div class="col-lg-4"><button id="easy" onClick="redirectToEasyBoard()"  type="button" class="btn btn-success btn diffbtn">Easy</button> </div>
-                                    <div class="col-lg-4"><button id="medium" onClick="redirectToMedBoard()"  type="button" class="btn btn-success btn diffbtn">Medium</button></div>
-                                    <div class="col-lg-4"><button id="hard" onClick="redirectToHardBoard()"  type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
+                                    <div class="col-lg-4"><button id="easy" onClick="redirectBoard(this)"  valuie=20 type="button" class="btn btn-success btn diffbtn">Easy</button> </div>
+                                    <div class="col-lg-4"><button id="medium" onClick="redirectBoard(this)"  value=40 type="button" class="btn btn-success btn diffbtn">Medium</button></div>
+                                    <div class="col-lg-4"><button id="hard" onClick="redirectBoard(this)"  value=60 type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
                                 </div>
                             </div>
                         </div>
