Added Css to Radio Buttons

--- a/index2.html
+++ b/index2.html
@@ -17,11 +17,6 @@
                             <div class="col-sm-12 col-md-6 ">
                                 <h1>Wellcome Guest</h1>
                                 <h3>Choose difficulty level</h3>
-                                <!-- <form class="login">
-                                <input class= "inp" type="text" placeholder="User Name"> </br>
-                                <input class= "inp"  type= "text" placeholder="Password"> </br>
-                                <button id="enter" type="button" class="btn btn-lg btn-primary btn">Enter</button>
-                                </form> -->
                             </div>
                         </div>
                         <div class="row justify-content-center" id="secondPageBtn">
@@ -32,8 +27,8 @@
                                     <div class="col-lg-4"><button id="hard" onClick="redirectBoard(this)"  value="60" type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
                                 </div>
                                 <div class="row">
-                                        <div class="col-lg-4"><input type="radio" name="boardType" value="premade">Premade</div>
-                                        <div class="col-lg-4"><input type="radio" name="boardType" value="rng" checked>Randomly Generated</div>
+                                        <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="premade">Premade</div>
+                                        <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="rng" checked>Randomly Generated</div>
                                     </div>
                             </div>
                         </div>
