--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
                 <div class="background">
                     <div class="backgroundBlock">
                         <div class="row justify-content-center" id="secondPage">
@@ -27,14 +27,14 @@
                                     <div class="col-lg-4"><button id="hard" onClick="redirectBoard(this)"  value="60" type="button" class="btn btn-primary btn diffbtn">Hard</button></div>
                                 </div>
                                 <div class="row">
-                                        <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="premade">Premade</div>
-                                        <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="rng" checked>Randomly Generated</div>
-                                    </div>
+                                    <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="premade">Premade</div>
+                                    <div class="col-lg-6 radioBtnChoice"><input type="radio" name="boardType" value="rng" checked>Randomly Generated</div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
 </body>
                      
                     
