--- a/index3.html
+++ b/index3.html
@@ -121,16 +121,16 @@
                 </div>
                <div class="row justify-content-center">  <!-- block of 6 will be centralized -->
                     <div class="col-sm-12 col-md-6 choosedifh1"> <!--from meium devices and up it will take 6 units central-->
-                        <h3>Choose Difficulty Level</h3> </br>
+                        <h3>Choose one of the options</h3> </br>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-4 col-md-6 col-lg-8">
                         <div class="row justify-content-center">
 
-                            <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn">Finish</button></div>
-                            <div class="col-md-6 col-lg-3"><button id="check" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn">Again</button></div>
-                            <div class="col-md-6 col-lg-3"><button id="check" onClick="hint()" type="button" class="btn btn-success btn diffbtn">Hint</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn finish">Finish</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn again">Again</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="check" onClick="hint()" type="button" class="btn btn-success btn diffbtn hint">Hint</button></div>
                         </div>
                     </div>
                 </div>
