--- a/index3.html
+++ b/index3.html
@@ -129,8 +129,8 @@
                         <div class="row justify-content-center">
 
                             <div class="col-md-6 col-lg-3"><button id="check" onClick="checkBoard()" type="button" class="btn btn-success btn diffbtn finish">Finish</button></div>
-                            <div class="col-md-6 col-lg-3"><button id="check" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn again">Again</button></div>
-                            <div class="col-md-6 col-lg-3"><button id="check" onClick="hint()" type="button" class="btn btn-success btn diffbtn hint">Hint</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="again" onClick="pageLoad()" type="button" class="btn btn-success btn diffbtn again">Again</button></div>
+                            <div class="col-md-6 col-lg-3"><button id="hint" onClick="hint()" type="button" class="btn btn-success btn diffbtn hint">Hint</button></div>
                         </div>
                     </div>
                 </div>
