--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
                     <div class="backgroundBlock">
                         <div class="row justify-content-center" id="secondPage">
                             <div class="col-sm-12 col-md-6 ">
-                                <h1>Wellcome Guest</h1>
+                                <h1 id=guestName></h1>
                                 <h3>Choose difficulty level</h3>
                             </div>
                         </div>
